容器终止态